caching with redis in chats, local profile for api gateway